--- a/src/locale/en/common.cfg
+++ b/src/locale/en/common.cfg
@@ -30,3 +30,9 @@
 	stack-filter-slim-inserter_part-b=Stack Filter Dual Slim Inserter
 
 [mod-setting-name]
+Kux-SlimInserters_debug-mode=Debug Mode
+Kux-SlimInserters_runtime-debug-mode=Debug Mode
+
+[mod-setting-description]
+Kux-SlimInserters_debug-mode=If enabled some exta code is executed to help debugging on factorio start. e.g. print information to console/log. This mode affects the performance somewhat and should be activated only when needed
+Kux-SlimInserters_runtime-debug-mode=If enabled some exta code is executed to help debugging during runtime. e.g. print information to console/log. This mode affects the performance somewhat and should be activated only when needed
