--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
 	],
 	"factorio.versions": [
 		{
-			"name": "Factorio 1.1",
+			"name": "Stable",
 			"factorioPath": "e:\\Program Files\\Factorio\\1.1\\bin\\x64\\factorio.exe",
 			"active": true
 		}
