--- a/src/locale/en/common.cfg
+++ b/src/locale/en/common.cfg
@@ -1,38 +1,40 @@
-[item-name]	
-
 [entity-name]
-	basic-slim-inserter=Basic Slim Inserter
-	long-slim-inserter=Long Slim Inserter
-	fast-slim-inserter=Fast Slim Inserter
-	filter-slim-inserter=Filter Slim Inserter
-	stack-slim-inserter=Stack Slim Inserter
-	stack-filter-slim-inserter=Stack Filter Slim Inserter
+basic-slim-inserter=Basic Slim Inserter
+long-slim-inserter=Long Slim Inserter
+fast-slim-inserter=Fast Slim Inserter
+filter-slim-inserter=Filter Slim Inserter
+stack-slim-inserter=Stack Slim Inserter
+stack-filter-slim-inserter=Stack Filter Slim Inserter
 
-	basic-double-slim-inserter=Basic Double Slim Inserter
-	long-double-slim-inserter=Long Double Slim Inserter
-	fast-double-slim-inserter=Fast Double Slim Inserter
-	filter-double-slim-inserter=Filter Double Slim Inserter
-	stack-double-slim-inserter=Stack Double Slim Inserter
-	stack-filter-double-slim-inserter=Stack Filter Double Slim Inserter
+basic-double-slim-inserter=Basic Double Slim Inserter
+long-double-slim-inserter=Long Double Slim Inserter
+fast-double-slim-inserter=Fast Double Slim Inserter
+filter-double-slim-inserter=Filter Double Slim Inserter
+stack-double-slim-inserter=Stack Double Slim Inserter
+stack-filter-double-slim-inserter=Stack Filter Double Slim Inserter
 
-	basic-slim-inserter_part-a=Basic Dual Slim Inserter
-	long-slim-inserter_part-a=Long Dual Slim Inserter
-	fast-slim-inserter_part-a=Fast Dual Slim Inserter
-	filter-slim-inserter_part-a=Filter Dual Slim Inserter
-	stack-slim-inserter_part-a=Stack Double Dual Inserter
-	stack-filter-slim-inserter_part-a=Stack Filter Dual Slim Inserter
+basic-slim-inserter_part-a=Basic Dual Slim Inserter
+long-slim-inserter_part-a=Long Dual Slim Inserter
+fast-slim-inserter_part-a=Fast Dual Slim Inserter
+filter-slim-inserter_part-a=Filter Dual Slim Inserter
+stack-slim-inserter_part-a=Stack Double Dual Inserter
+stack-filter-slim-inserter_part-a=Stack Filter Dual Slim Inserter
 
-	basic-slim-inserter_part-b=Basic Dual Slim Inserter
-	long-slim-inserter_part-b=Long Dual Slim Inserter
-	fast-slim-inserter_part-b=Fast Dual Slim Inserter
-	filter-slim-inserter_part-b=Filter Dual Slim Inserter
-	stack-slim-inserter_part-b=Stack Double Dual Inserter
-	stack-filter-slim-inserter_part-b=Stack Filter Dual Slim Inserter
+basic-slim-inserter_part-b=Basic Dual Slim Inserter
+long-slim-inserter_part-b=Long Dual Slim Inserter
+fast-slim-inserter_part-b=Fast Dual Slim Inserter
+filter-slim-inserter_part-b=Filter Dual Slim Inserter
+stack-slim-inserter_part-b=Stack Double Dual Inserter
+stack-filter-slim-inserter_part-b=Stack Filter Dual Slim Inserter
 
-[mod-setting-name]
-Kux-SlimInserters_debug-mode=Debug Mode
-Kux-SlimInserters_runtime-debug-mode=Debug Mode
+basic-loader-slim-inserter=Basic Slim Loader
+fast-loader-slim-inserter=Fast Slim Loader
+filter-loader-slim-inserter=Filter Slim Loader
+stack-loader-slim-inserter=Stack Loader
+stack-filter-loader-slim-inserter=Stack Filter Slim Loader
 
-[mod-setting-description]
-Kux-SlimInserters_debug-mode=If enabled some exta code is executed to help debugging on factorio start. e.g. print information to console/log. This mode affects the performance somewhat and should be activated only when needed
-Kux-SlimInserters_runtime-debug-mode=If enabled some exta code is executed to help debugging during runtime. e.g. print information to console/log. This mode affects the performance somewhat and should be activated only when needed
+[entity-description]
+slim-inserter=
+double-slim-inserter=
+dual-slim-inserter=
+loader-slim-inserter=
